Filling the filtered orderlines when an order is selected in the compobox is now working

--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -747,7 +747,8 @@
 	<system:String x:Key="Edit.Receipt.DataGrid.Header.SupplierCode">Bestelnummer</system:String>
 	<system:String x:Key="Edit.Receipt.DataGrid.Header.SupplierDescription">Omschrijving leverancier</system:String>
 	<system:String x:Key="Edit.Receipt.DataGrid.Header.Ordered">Besteld</system:String>
-	<system:String x:Key="Edit.Receipt.DataGrid.Header.Received">Ontvangen</system:String>
+	<system:String x:Key="Edit.Receipt.DataGrid.Header.Received">Eerder ontvangen</system:String>
+	<system:String x:Key="Edit.Receipt.DataGrid.Header.ToReceive">Ontvangen</system:String>
 	<!--#endregion-->
 	<!--#endregion-->
 
