--- a/Modelbouwer/Resources/Styles/DatePicker.xaml
+++ b/Modelbouwer/Resources/Styles/DatePicker.xaml
@@ -49,7 +49,7 @@
 										>
 										<ContentControl.Template>
 											<ControlTemplate>
-												<TextBlock Text="Selecteer datum" />
+												<TextBlock Text="{StaticResource General.DatePicker.Watermark}" />
 											</ControlTemplate>
 										</ContentControl.Template>
 									</ContentControl>
